test/test_units/test_kclvm/test_types/invalid_test_data/loop/loop_5.k
x = [i + v for i, v in [0] or ["1"]]
